--- a/src/components/githubContributions/GithubContributions.css
+++ b/src/components/githubContributions/GithubContributions.css
@@ -1,15 +1,18 @@
 .github-contributions {
-    width: 100%;
-    text-align: center;
+  width: 100%;
+  text-align: center;
 }
 .github-contributions-img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 @media screen and (max-width: 768px) {
-    .github-contributions {
-        font-size: 20px;
-    }
-    
+  .github-contributions {
+    font-size: 20px;
+  }
+  .github-contributions-img {
+    width: 80%;
+    height: auto;
+  }
 }
